--- a/frontend/nginx/css/HOME.css
+++ b/frontend/nginx/css/HOME.css
@@ -98,7 +98,7 @@ header {
     color: var(--branco);
     text-decoration: none;
     font-weight: bold;
-    border-radius: 50px; /* Estilo arredondado e moderno */
+    border-radius: 50px;
     transition: transform 0.3s, background-color 0.3s;
 }
 
@@ -114,14 +114,56 @@ header {
     text-align: center;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
 .dark-bg {
     background-color: var(--azul-escuro);
     color: var(--branco);
 }
 
+.white-bg {
+    background-color: var(--branco);
+}
+
 h2 {
     font-size: 2.5rem;
     margin-bottom: 30px;
+}
+
+/* Estilização da Equipe (Membros) */
+.team-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 30px;
+    margin-top: 50px;
+}
+
+.team-member {
+    padding: 20px;
+    transition: 0.3s;
+}
+
+.team-member i {
+    font-size: 4rem;
+    color: var(--azul-destaque);
+    margin-bottom: 15px;
+}
+
+.team-member h3 {
+    margin-bottom: 10px;
+    color: var(--azul-escuro);
+}
+
+.team-member p {
+    font-size: 0.9rem;
+    color: #555;
+}
+
+.team-member:hover {
+    transform: translateY(-10px);
 }
 
 footer {
